sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:19: error: Int does not take parameters
              echange(i,sum)
                     ^